--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lotide",
+  "name": "@jciurc/lotide",
   "version": "1.0.0",
   "description": "A mini clone of the Lodash library.\n**This library was published for learning purposes only. It is not intended for use in production-grade software.",
   "main": "lib/index.js",
@@ -21,5 +21,9 @@
   "devDependencies": {
     "chai": "^4.3.6",
     "mocha": "^9.2.2"
+  },
+  "directories": {
+    "lib": "lib",
+    "test": "test"
   }
 }
